--- a/playbooks/files/home/user/.config/systemd/user/pyenv-update.service.j2
+++ b/playbooks/files/home/user/.config/systemd/user/pyenv-update.service.j2
@@ -4,7 +4,7 @@ After=default.target
 
 [Service]
 Type=simple
-ExecStart={{ lookup('env', 'HOME') }}/.local/bin/pyenv-update
+ExecStart={{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin/pyenv-update
 
 [Install]
 # https://www.freedesktop.org/software/systemd/man/systemd.special.html#default.target1
