--- a/playbooks/files/home/user/.config/systemd/user/rust-tools-update.service.j2
+++ b/playbooks/files/home/user/.config/systemd/user/rust-tools-update.service.j2
@@ -4,9 +4,9 @@ After=network-online.target
 
 [Service]
 Type=simple
-Environment=CARGO_INSTALL_ROOT={{ lookup('env', 'HOME') }}/.local
+Environment=CARGO_INSTALL_ROOT={{ lookup('ansible.builtin.env', 'HOME') }}/.local
 ExecCondition=non-metered-connection.bash
-ExecStart={{ lookup('env', 'HOME') }}/.local/bin/rust-tools-update
+ExecStart={{ lookup('ansible.builtin.env', 'HOME') }}/.local/bin/rust-tools-update
 
 [Install]
 # https://www.freedesktop.org/software/systemd/man/systemd.special.html#default.target1
